# estaTron

./: README.md  generator.json
AccountPermissionSubstream/: generator.json
AccountPermissionSubstream/accountperm/: Cargo.toml  README.md  substreams.yaml
AccountPermissionSubstream/accountperm/src/pb/: mod.rs
allparams/: substreams.yaml
allparams/src/: lib.rs
allparams/src/pb/: sf.substreams.sink.files.v1.rs
allparams_db/: Cargo.toml  schema.sql
allparams_db/src/: lib.rs
allparams_db/src/pb/: mod.rs
allparams_jsonl/: state copy.yaml  substreams.yaml
allparams_jsonl/proto/: lines.proto
allparams_jsonl/src/: lib.rs
allparams_jsonl/src/pb/: google.api.rs
clickhouse_sink/: .gitignore  Cargo.toml  Clickhouse notes.md  README.md  clickhouse-sink-v0.1.0.spkg  schema.sql  substreams.yaml
clickhouse_sink/proto/sf/substreams/sink/database/v1/: database.proto
clickhouse_sink/src/: lib.rs
clickhouse_sink/src/pb/: mod.rs  sf.substreams.sink.database.v1.rs
jsonl_sink/: .gitignore  README.md  jsonl-sink-v0.1.0.spkg  substreams.yaml
jsonl_sink/src/: lib.rs
jsonl_sink/src/pb/: .last_generated_hash  protocol.rs
scripts/: AccounUpdatePerQuarter.sh  jsonl_to_clickhouse.py  substreamContractType.sh
